package ar.edu.uba.fi;

public interface Material {
    void reducirCantidadEquivalenteA(Material m);
}
